# cbs-eval

./: .gitignore  plot_alpha_scatter.py  plot_requested_figures.py  pyproject.toml  requirements.txt  sim_paper.py  sim_results_adaptive.json  sim_results_costdriven.json  sim_results_costmin.json  sim_results_final.json
analysis/: ablation.py  baseline_comparison.py  compare.py  feature_importance.py  feature_importance_full.py  metrics.py  sensitivity.py  w2_jitter_sensitivity.py  w5_decision_quality.py
configs/: models.yaml  real_scenarios.yaml  sim_scenarios.yaml  workloads.yaml
mlwd/: classifier.py  collect_ci.py  collect_nsys.py  collect_sensitivity.py  colocation.py  compare.py  config.py  extrapolate.py  interference.py  merge_simple.py  runner.py  supplement.py
plot/: chap3_plots.py  style.py  thesis_plots.py
real/: __init__.py  benchmark.py  collect_metrics.py  gateway.py  launch.py  run_real.py  vllm_instance.py
scripts/: 00_build_cuda.sh  01_collect_mlwd.sh  02_run_real.sh  03_run_sim.sh  04_analyze.sh  05_supplement_colocation.sh  preflight.sh
sim/: profile_bridge.py  run_sim.py  scenario.py  v100_profile.py
sim/engine/: __init__.py  cbs_cluster.py  cbs_scheduler.py  cbs_worker.py  disagg_cluster.py  params.py  request.py  scheduler.py  time_estimator.py  worker.py  workload.py
workload/: __init__.py  generator.py  synthetic.py
